EPIC-863 - Public Comment Period - Update Column Information
- Fixed column display for the public comment period (public-comments/list.html)
- Fixed display for mobile
- Updated/Refactored ng-table-overrides.scss and table.scss (fixed pagination styling)
- Adjusted markup in list.html to correspond with updated styling

--- a/modules/core/client/scss/components/ng-table-overrides.scss
+++ b/modules/core/client/scss/components/ng-table-overrides.scss
@@ -8,7 +8,7 @@ $table-pagination-bg: #fff;
 
 .table {
     margin-bottom: 0;
-    background-color: $table-bg;
+    //background-color: $table-bg;
 
     thead {
         > tr {
@@ -41,6 +41,8 @@ $table-pagination-bg: #fff;
     }
 
     tbody {
+        background-color: $table-bg;
+
         > tr {
             > td {
                 padding: 1.25rem 0.5rem;
@@ -72,11 +74,6 @@ $table-pagination-bg: #fff;
     th {
         background-color: $table-header-bg;
     }
-}
-
-.ng-table-pager {
-    border-top: none;
-    background-color: $table-pagination-bg;
 }
 
 td.actions-col,
@@ -150,6 +147,48 @@ td.has-actions {
 
             .glyphicon {
                 font-size: 1.8rem;
+            }
+        }
+    }
+}
+
+// Pagination Control
+$pgn-container-bg: #f7f8fa;
+$pgn-btn-active-bg: #5091cd;
+$pgn-btn-active-color: #fff;
+
+$pgn-btn-border: 1px solid #ccc;
+$pgn-btn-color: #000;
+
+
+.ng-table-pager {
+    padding: 1rem;
+    overflow: hidden;
+    border-top: none;
+    background: $pgn-container-bg;
+
+    button {
+        padding: 0.5rem;
+        min-width: 4rem;
+        min-height: 3.4rem;
+
+        &:hover,
+        &:focus {
+            border-color: $pgn-btn-active-bg;
+            background-color: rgba($pgn-btn-active-bg, 0.8);
+            color: $pgn-btn-active-color;
+        }
+
+        &.active {
+            border-color: $pgn-btn-active-bg;
+            background-color: $pgn-btn-active-bg;
+            color: $pgn-btn-active-color;
+
+            &:hover,
+            &:focus {
+                border-color: $pgn-btn-active-bg;
+                background-color: rgba($pgn-btn-active-bg, 0.8);
+                color: $pgn-btn-active-color;
             }
         }
     }
